Estructura en HTML para Registro

--- a/views/Registro.html
+++ b/views/Registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Registro</title>
 </head>
 <body>
     <!--Inicio Encabezado-->
@@ -15,20 +15,20 @@
 
     <!--Inicio contenido central-->
     <section>
-        <h2>Inicia Sesión</h2>
+        <h2>Registrate</h2>
 
         <!--Inicio formulario-->
         <form>
             <label for="username">Nombre de usuario:</label>
-            <input type="text" id="username" placeholder="Ej: John_123..." autofocus>
+            <input type="text" id="username" placeholder="Ej: Miguel@123..." title="Debe empezar con una letra" autofocus>
 
-            <label for="password">Contraseña</label>
-            <input type="password" id="password">
-            <input type="checkbox" id="show_password"> Mostrar contraseña
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" placeholder="Mínimo 5 caracteres...">
+            <input type="checkbox" id="show_password">Mostrar contraseña
 
-            <button type="submit">Entrar</button>
+            <button type="submit">Registrar</button>
         </form>
-        <p>¿Aún no te has registrado? <a href="Registro.html">Regístrate aquí</a></p>
+        <p>¿Ya tienes una cuenta? <a href="InicioSesion.html">Inicia sesión</a></p>
         <!--Fin formulario-->
 
     </section>
