--- a/views/Registro.html
+++ b/views/Registro.html
@@ -5,33 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+
+    <link rel="stylesheet" href="../styles/Background.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <!--Inicio Encabezado-->
-    <header>
-        <h1>Learning Partner</h1>
+    <header class="bg-dark bg-gradient p-1">
+        <h1 class="fs-3 align-middle ms-4"><a class="text-decoration-none text-white pe-auto" href="#">Learning Partner</a></h1>
     </header>
     <!--Fin Encabezado-->
 
     <!--Inicio contenido central-->
-    <section>
-        <h2>Registrate</h2>
+    <div class="contenedor pt-5">
+        <section style="height: 500px; width: 550px;" class="container-lg bg-dark rounded-3 p-3 shadow">
+            <h2 class="text-white text-center mb-4 mt-3">Registrate</h2>
 
-        <!--Inicio formulario-->
-        <form>
-            <label for="username">Nombre de usuario:</label>
-            <input type="text" id="username" placeholder="Ej: Miguel@123..." title="Debe empezar con una letra" autofocus>
+            <!--Inicio formulario-->
+            <form class="ms-auto me-auto text-light h-75 w-75 d-flex flex-column">
+                <div class="input-group mb-3">
+                    <label class="input-group-text" for="username">Nombre de usuario:</label>
+                    <input class="form-control" type="text" id="username" placeholder="Ej: Miguel@123" title="Debe empezar con una letra" autofocus>
+                </div>            
 
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" placeholder="Mínimo 5 caracteres...">
-            <input type="checkbox" id="show_password">Mostrar contraseña
+                <div class="input-group mb-2">
+                    <label class="input-group-text" for="password">Contraseña:</label>
+                    <input class="form-control" type="password" id="password" placeholder="Mínimo 5 caracteres.">
+                </div>
+                
+                <div class="form-check form-switch mb-auto">
+                    <input class="form-check-input" type="checkbox" id="show_password">
+                    <label class="form-check-label" for="show_password">Mostrar contraseña</label>
+                </div>
 
-            <button type="submit">Registrar</button>
-        </form>
-        <p>¿Ya tienes una cuenta? <a href="InicioSesion.html">Inicia sesión</a></p>
-        <!--Fin formulario-->
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary" type="submit">Registrar</button>
+                </div>
 
-    </section>
+                <p class="text-light">¿Ya tienes una cuenta? <a href="InicioSesion.html">Inicia sesión</a></p>
+            </form>
+            <!--Fin formulario-->
+
+        </section>
+    </div>
     <!--Fin contenido central-->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
