Estilos para Inicio de sesión

--- a/views/Registro.html
+++ b/views/Registro.html
@@ -12,7 +12,12 @@
 <body>
     <!--Inicio Encabezado-->
     <header class="bg-dark bg-gradient p-1">
-        <h1 class="fs-3 align-middle ms-4"><a class="text-decoration-none text-white pe-auto" href="#">Learning Partner</a></h1>
+        <h1 class="fs-3 align-middle ms-4">
+            <a class="text-decoration-none text-white" href="#">
+                <img class="icon" src="../resources/images/icon.png">        
+                Learning Partner
+            </a>
+        </h1>
     </header>
     <!--Fin Encabezado-->
 
