--- a/styles/Background.css
+++ b/styles/Background.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -10,7 +11,7 @@ body {
     background-position: center;
     background-attachment: fixed;
     height: 100%;
-    overflow-y: hidden;
+    overflow-y: scroll;
 }
 
 .contenedor {
@@ -18,4 +19,12 @@ body {
     z-index: 2;
     width: 100%;
     height: 100vh;
+}
+
+.icon {
+    width: 24px;
+}
+
+a {
+    cursor: pointer;
 }
