--- a/views/Administracion.html
+++ b/views/Administracion.html
@@ -5,24 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
+    <!--Inicio del menú-->
     <aside>
+        <!--Inicio información del usuario-->
         <div>
             <img src="../resources/images/userimage.png" alt="User image" title="User image">
             <span>User name</span>
         </div>
+        <!--Fin información del usuario-->
         <hr>
 
-        <ul>
-            <li><a href="#">Uploaded documents</a></li>
+        <!--Inicio opciones del menú-->
+        <div>
+            <a href="#">Uploaded documents</a>
 
-            <li><a href="#">Upload document</a></li>
+            <a href="#">Upload document</a>
 
-            <li><a href="#">Settings</a></li>
+            <a href="#">Settings</a>
 
-            <li><a href="#">Log out<img src="../resources/images/exit.png"></a></li>
-        </ul>
+            <a href="#">Log out<img src="../resources/images/exit.png"></a>
+        </div>
+        <!--Fin opciones del menú-->
     </aside>
+    <!--Fin del menú-->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
 </body>
 </html>
