--- a/views/Administracion.html
+++ b/views/Administracion.html
@@ -1,28 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html >
+<html lang="es">
+<cabeza>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel</title>
-</head>
-<body>
-    <aside>
-        <div>
-            <img src="../resources/images/userimage.png" alt="User image" title="User image">
-            <span>User name</span>
-        </div>
-        <hr>
+    <meta nombre="viewport" content="width=device-width, initial-scale=1.0">
+    <título>panel de administración </título> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel=" hojade estilo" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anónimo">
+</cabeza>
+<corporal> 
+    <!--Inicio del menú-->
+ <aparte>
+        <!--Inicio información del usuario-->
+    <div>
+        <img src=".. /resources/images/userimage.png" alt="Imagen de usuario" title="Imagen de usuario">
+        <span>nombre de usuario</span>
+    </div>
+        <!--Inicio opciones del menú-->
 
-        <ul>
-            <li><a href="#">Uploaded documents</a></li>
+        <!--Inicio opciones del menú-->
+    <div>
+        <a href="#">Documentossubidos </a>
 
-            <li><a href="#">Upload document</a></li>
+        <un href="#">Subir documento></un>
 
-            <li><a href="#">Settings</a></li>
+        <a href="#">Configuración</a>
 
-            <li><a href="#">Log out<img src="../resources/images/exit.png"></a></li>
-        </ul>
-    </aside>
-</body>
-</html>
+        <a href="#">Cerrar sesión<img src=".. /resources/images/exit.png"></a>
+    </div>
+        <!-- Fin opciones del menú-->
+ </aparte>
+    <!--Fin del menú-->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+</corporal> 
+</html
