--- a/views/index.html
+++ b/views/index.html
@@ -21,18 +21,24 @@
         </h1>
     </header>
     <!--Fin Encabezado-->
-
+    
+    <!--Inicio contenido central-->
+    <!--Inicio cuadro de texto-->
     <div class="contenedor pt-5">
-        <section style="height: 400px; width: 300px;" class="container-lg bg-dark rounded-2 p-2 shadow">
-            <h2 class="text-white text-center mb-4 mt-3">Bienvenido</h2>
-        <div class="d-grid gap-2">
-            <button class="btn btn-secondary mb-4" onclick="location.href='http://127.0.0.1:3002/grupo-9-48/views/InicioSesion.html'">Iniciar Sesión</button>
-            <button class="btn btn-secondary" onclick="location.href='#'">Probar</button>
-        </div>
-
+        <section id="boxini" style="height: 100px; width: 300px;" class="container-lg bg-dark rounded-2 p-2 shadow">
+            <h2 class="text-white text-center mb-4 mt-3">Bienvenidos</h2>
         </section>
-
+    <!--Fin cuadro de texto-->
+    <!--Inicio botones-->
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <button id="btninilog" class="btn btn-secondary rounded-2 p-2" onclick="location.href='http://127.0.0.1:3003/grupo-9-48/views/InicioSesion.html'">Iniciar Sesión</button>
+            <button id="btninitest" class="btn btn-secondary rounded-2 p-2" onclick="location.href='#'">Probar</button>
+        </div>
+    <!--Fin botones-->
+    </div>      
     </div>
+    <!--Fin contenido central-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
  
