Botones de la página de inicio arreglados, textos cambiados a inglés y conexión entre las vistas Inicio, Inicio de sesión, Registro y Acerca de

--- a/views/Administracion.html
+++ b/views/Administracion.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html >
 <html lang="es">
-<cabeza>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="rounded-3 mt-5">
-                    <a href="#" class="list-group-item list-group-item-dark list-group-action d-flex justify-content-between align-items-center">Log out<img src="../resources/images/exit.png"></a>
+                    <a href="#" class="list-group-item list-group-item-dark list-group-action d-flex justify-content-between align-items-center">Log out<img src="../resources/images/exit.png" alt="Exit icon"></a>
                 </div>
             </div>
             <!--Fin opciones del menú-->
@@ -49,9 +49,6 @@
     </aside>
     <!--Inicio del lateral-->
 
-    <section>
-        
-    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
