--- a/views/Registro.html
+++ b/views/Registro.html
@@ -13,7 +13,7 @@
     <!--Inicio Encabezado-->
     <header class="bg-dark bg-gradient p-1">
         <h1 class="fs-3 align-middle ms-4">
-            <a class="text-decoration-none text-white" href="#">
+            <a class="text-decoration-none text-white" href="index.html">
                 <img class="icon" src="../resources/images/icon.png">        
                 Learning Partner
             </a>
