--- a/views/index.html
+++ b/views/index.html
@@ -12,13 +12,15 @@
 
 <body>
     <!--Inicio Encabezado-->
-    <header class="bg-dark bg-gradient p-1">
-        <h1 class="fs-3 align-middle ms-4">
-            <a class="text-decoration-none text-white" href="#">
+    <header class="bg-dark bg-gradient ps-4 pe-4 pt-1 pb-1 d-flex flex-row justify-content-between align-items-center">
+        <h1 class="fs-3 align-middle">
+            <a class="text-decoration-none text-white" href="index.html">
                 <img class="icon" src="../resources/images/icon.png">
                 Learning Partner
             </a>
         </h1>
+
+        <a class="text-decoration-none text-white" href="AcercaDe.html">About us</a>
     </header>
     <!--Fin Encabezado-->
     
@@ -26,14 +28,14 @@
     <!--Inicio cuadro de texto-->
     <div class="contenedor pt-5">
         <section id="boxini" style="height: 100px; width: 300px;" class="container-lg bg-dark rounded-2 p-2 shadow">
-            <h2 class="text-white text-center mb-4 mt-3">Bienvenidos</h2>
+            <h2 class="text-white text-center mb-4 mt-3">Welcome</h2>
         </section>
     <!--Fin cuadro de texto-->
     <!--Inicio botones-->
     <div class="row">
         <div class="col-lg-12 text-center">
-            <button id="btninilog" class="btn btn-secondary rounded-2 p-2" onclick="location.href='http://127.0.0.1:3003/grupo-9-48/views/InicioSesion.html'">Iniciar Sesión</button>
-            <button id="btninitest" class="btn btn-secondary rounded-2 p-2" onclick="location.href='#'">Probar</button>
+            <a id="btninilog" class="btn btn-secondary rounded-2 p-2" href="InicioSesion.html">Sign in</a>
+            <a id="btninitest" class="btn btn-secondary rounded-2 p-2" href="#">Test it!</a>
         </div>
     <!--Fin botones-->
     </div>      
