--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
     <header class="bg-dark bg-gradient ps-4 pe-4 pt-1 pb-1 d-flex flex-row justify-content-between align-items-center">
         <h1 class="fs-3 align-middle">
             <a class="text-decoration-none text-white" href="index.html">
-                <img class="icon" src="../resources/images/icon.png">
+                <img class="icon" src="../resources/images/icon.png" alt="□">
                 Learning Partner
             </a>
         </h1>
