Estructura en HTML para la seccion de todos los documentos

--- a/views/Administracion.html
+++ b/views/Administracion.html
@@ -68,6 +68,32 @@
                 </div>
             </div>
         </div>
+
+        <div>
+            <div>
+                <h3>All</h3>
+                <hr>
+            </div>
+
+            <div>
+                <input type="text" name="document-browser" id="document-browser" placeholder="Document title...">
+                <button>
+                    <img width="20" src="../resources/images/search.svg" alt="Search">
+                </button>
+            </div>
+
+            <div>
+                <div>
+                    <h4>Title</h4>
+                </div>
+                
+                <div>
+                    <button>
+                        <img width="70px" src="../resources/images/add.svg" alt="Add">
+                    </button>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
