--- a/styles/Administracion.css
+++ b/styles/Administracion.css
@@ -23,6 +23,15 @@
 
 .tarjeta {
     width: 25%;
+}
+
+.tarjeta-grid {
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: calc(20% - 8px);
+}
+
+.tarjeta, .tarjeta-grid {
     height: 250px;
     background-color: transparent;
     border-radius: 5px;
@@ -32,7 +41,7 @@
     position: relative;
     box-sizing: border-box;
     cursor: pointer;
-    margin: 0px 4px;
+    margin: 4px;
 }
 
 .tarjeta > .img-background {
@@ -64,4 +73,20 @@
 .info-documento:hover {
     visibility: visible;
     background-color: rgba(0, 0, 0, 0.445);
+}
+
+.flex-grid {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.add-btn {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+}
+
+.add-btn:hover {
+    background-color: white;
 }
