configuración acerca de nosotros

--- a/views/index.html
+++ b/views/index.html
@@ -12,13 +12,18 @@
 
 <body>
     <!--Inicio Encabezado-->
-    <header class="bg-dark bg-gradient p-1">
-        <h1 class="fs-3 align-middle ms-4">
+    <header class="row bg-dark bg-gradient p-1">
+        <h1 class="col fs-3 ms-4">
             <a class="text-decoration-none text-white" href="#">
                 <img class="icon" src="../resources/images/icon.png">
                 Learning Partner
             </a>
         </h1>
+        <h4 class="col fs-3 text-end ms-4">
+            <a class="text-decoration-none text-white" href="AcercaDe.html">
+                Acerca De Nosotros
+            </a>
+        </h4>
     </header>
     <!--Fin Encabezado-->
     
@@ -32,7 +37,7 @@
     <!--Inicio botones-->
     <div class="row">
         <div class="col-lg-12 text-center">
-            <button id="btninilog" class="btn btn-secondary rounded-2 p-2" onclick="location.href='http://127.0.0.1:3003/grupo-9-48/views/InicioSesion.html'">Iniciar Sesión</button>
+            <button id="btninilog" class="btn btn-secondary rounded-2 p-2" onclick="location.href='InicioSesion.html'">Iniciar Sesión</button>
             <button id="btninitest" class="btn btn-secondary rounded-2 p-2" onclick="location.href='#'">Probar</button>
         </div>
     <!--Fin botones-->
