--- a/views/InicioSesion.html
+++ b/views/InicioSesion.html
@@ -11,13 +11,18 @@
 </head>
 <body>
     <!--Inicio Encabezado-->
-    <header class="bg-dark bg-gradient p-1">
-        <h1 class="fs-3 align-middle ms-4">
+    <header class="row bg-dark bg-gradient p-1">
+        <h1 class="col fs-3 ms-4">
             <a class="text-decoration-none text-white" href="#">
                 <img class="icon" src="../resources/images/icon.png">
                 Learning Partner
             </a>
         </h1>
+        <h4 class="col fs-3 text-end ms-4">
+            <a class="text-decoration-none text-white" href="AcercaDe.html">
+                Acerca De Nosotros
+            </a>
+        </h4>
     </header>
     <!--Fin Encabezado-->
 
