--- a/views/InicioSesion.html
+++ b/views/InicioSesion.html
@@ -13,7 +13,7 @@
     <!--Inicio Encabezado-->
     <header class="row bg-dark bg-gradient p-1">
         <h1 class="col fs-3 ms-4">
-            <a class="text-decoration-none text-white" href="#">
+            <a class="text-decoration-none text-white" href="index.html">
                 <img class="icon" src="../resources/images/icon.png">
                 Learning Partner
             </a>
