Estilo para el lector

--- a/views/Lector.html
+++ b/views/Lector.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <!--Inicio del encabezado-->
-    <header>
-        <div>
-            <a title="Go to Admin panel" href="Administracion.html">
+    <header class="d-flex bg-dark justify-content-between p-2 text-white pe-4 ps-4">
+        <div class="d-flex">
+            <a class="d-flex align-middle me-3" title="Go to Admin panel" href="Administracion.html">
                 <img width="40px" src="../resources/images/back.svg" alt="Go back">
             </a>
-            <h1>Title</h1>
+            <h1 class="align-middle m-0">Title</h1>
         </div>
 
         <div>
-            <span>My dictionary</span>
-            <img width="40px" src="../resources/images/dictionary.svg" alt="Click me">
+            <span class="fs-3">My dictionary</span>
+            <img class="bg-light rounded-3" width="40px" src="../resources/images/dictionary.svg" alt="Click me">
         </div>
     </header>
     <!--Fin del encabezado-->
