Estilo para la seccion de Informacion personal

--- a/views/Administracion.html
+++ b/views/Administracion.html
@@ -33,15 +33,15 @@
             <!--Inicio opciones del menú-->
             <div class="options">
                 <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-dark list-group-action active">Uploaded documents</a>
+                    <a href="Administracion.html" class="list-group-item list-group-item-dark list-group-action active">Uploaded documents</a>
 
                     <a href="#" class="list-group-item list-group-item-dark list-group-action">Upload document</a>
 
-                    <a href="#" class="list-group-item list-group-item-dark list-group-action">Settings</a>
+                    <a href="AdministracionDocumentos.html" class="list-group-item list-group-item-dark list-group-action">Settings</a>
                 </div>
 
                 <div class="rounded-3 mt-5">
-                    <a href="#" class="list-group-item list-group-item-dark list-group-action d-flex justify-content-between align-items-center">Log out<img src="../resources/images/exit.png" alt="Exit icon"></a>
+                    <a href="index.html" class="list-group-item list-group-item-dark list-group-action d-flex justify-content-between align-items-center">Log out<img src="../resources/images/exit.png" alt="Exit icon"></a>
                 </div>
             </div>
             <!--Fin opciones del menú-->
