--- a/views/AdministracionDocumentos.html
+++ b/views/AdministracionDocumentos.html
@@ -11,24 +11,67 @@
     <link rel="stylesheet" href="../styles/AdministracionDocumentos.css">
 </head>
 
-<body>
-    <!--Inicio del contenido principal-->
-    <section>
-        <h1>Settings</h1>
+<body style="background-color: #343A40;">
+    <!--Inicio del lateral-->
+    <aside class="fixed-top">
+        <nav style="z-index: 10;" class="navbar navbar-dark bg-dark" id="menu-btn">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu" aria-controls="menu" aria-expanded="false">
+                    <span class="navbar-toggler-icon menu-icon"></span>
+                </button>
+            </div>
+        </nav>
 
-        <!--Inicio de información personal-->
-        <div>
-            <h5>User</h5>
-            
-            <div>
-                <div>
-                    <img src="../resources/images/userimage.png" alt="Image">
-                    <button type="button">Change image</button>
+        <!--Inicio del menú-->
+        <div style="z-index: 10;" class="collapse collapse-horizontal flex-column w-25 bg-dark p-3 text-white position-absolute" id="menu">
+            <!--Inicio información del usuario-->
+            <div class="text-center">
+                <img src="../resources/images/userimage.png" alt="User image" title="User image">
+                <span class="fs-2 align-middle">User name</span>
+            </div>
+            <!--Fin información del usuario-->
+            <hr>
+
+            <!--Inicio opciones del menú-->
+            <div class="options">
+                <div class="list-group">
+                    <a href="Administracion.html" class="list-group-item list-group-item-dark list-group-action active">Uploaded documents</a>
+
+                    <a href="#" class="list-group-item list-group-item-dark list-group-action">Upload document</a>
+
+                    <a href="Administracion.html" class="list-group-item list-group-item-dark list-group-action">Admin panel</a>
                 </div>
 
-                <div>
-                    <input type="text" name="username" id="username">
-                    <button type="button">Edit name</button>
+                <div class="rounded-3 mt-5">
+                    <a href="index.html" class="list-group-item list-group-item-dark list-group-action d-flex justify-content-between align-items-center">Log out<img src="../resources/images/exit.png" alt="Exit icon"></a>
+                </div>
+            </div>
+            <!--Fin opciones del menú-->
+        </div>
+        <!--Fin del menú-->
+    </aside>
+    <!--Inicio del lateral-->
+
+    <!--Inicio del contenido principal-->
+    <section class="container-fluid p-4 mt-5">
+        <h1 class="fs-1 text-white">Settings</h1>
+
+        <!--Inicio de información personal-->
+        <div class="container mb-5 target rounded-3">
+            <h3 class="text-center">User</h3>
+            <hr>
+            
+            <div class="d-flex justify-content-around align-items-center">
+                <div class="d-flex flex-column">
+                    <div style="border: 3px solid black; border-radius: 50%; width: 150px; height: 150px; background-color: white;" class="mb-4">
+                        <img class="w-100 h-100" src="../resources/images/userimage.png" alt="Image">
+                    </div>
+                    <button type="button" class="btn btn-secondary">Change image</button>
+                </div>
+
+                <div class="w-50 input-group bg-white rounded-3">
+                    <input class="form-control" type="text" name="username" id="username" value="User name">
+                    <button class="btn btn-outline-secondary" type="button" >Edit name</button>
                 </div>
             </div>
         </div>
