--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="col-lg-12 text-center">
             <a id="btninilog" class="btn btn-secondary rounded-2 p-2" href="InicioSesion.html">Sign in</a>
-            <a id="btninitest" class="btn btn-secondary rounded-2 p-2" href="#">Test it!</a>
+            <a id="btninitest" class="btn btn-secondary rounded-2 p-2" href="Lector.html">Test it!</a>
         </div>
     <!--Fin botones-->
     </div>      
