Traduccion de los textos en español a ingles

--- a/views/AcercaDe.html
+++ b/views/AcercaDe.html
@@ -84,7 +84,7 @@
     <!--Fin del contenido-->
 
     <footer class="bg-dark pt-5 pb-5 text-center">
-        <a class="text-decoration-none text-white" title="Ir a Github" href="#">Repositorio en Github <img src="../resources/images/github.png" alt="Ir al Github"></a>
+        <a class="text-decoration-none text-white" title="Ir a Github" href="https://github.com/StivenHerreraSierra/grupo-9-48.git">Github repository <img src="../resources/images/github.png" alt="Ir al Github"></a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
