--- a/views/InicioSesion.html
+++ b/views/InicioSesion.html
@@ -24,30 +24,30 @@
     <!--Inicio contenido central-->
     <div class="contenedor pt-5">
         <section style="height: 500px; width: 550px;" class="container-lg bg-dark rounded-3 p-3 shadow">
-            <h2 class="text-white text-center mb-4 mt-3">Inicia Sesión</h2>
+            <h2 class="text-white text-center mb-4 mt-3">Sign in</h2>
 
             <!--Inicio formulario-->
             <form class="ms-auto me-auto text-light h-75 w-75 d-flex flex-column">
                 <div class="input-group mb-3">
-                    <label class="input-group-text" for="username">Nombre de usuario:</label>
-                    <input class="form-control" type="text" id="username" placeholder="Ej: John_123" autofocus>
+                    <label class="input-group-text" for="username">User name:</label>
+                    <input class="form-control" type="text" id="username" placeholder="Ex: John_123" autofocus>
                 </div>
 
                 <div class="input-group mb-2">
-                    <label class="input-group-text" for="password">Contraseña:</label>
+                    <label class="input-group-text" for="password">Password:</label>
                     <input class="form-control" type="password" id="password">
                 </div>
 
                 <div class="form-check form-switch mb-auto">
                     <input class="form-check-input" type="checkbox" id="show_password">
-                    <label class="form-check-label" for="show_password">Mostrar contraseña</label>
+                    <label class="form-check-label" for="show_password">Show password</label>
                 </div>
 
                 <div class="d-grid gap-2">
-                    <button class="btn btn-primary" type="submit">Entrar</button>
+                    <button class="btn btn-primary" type="submit">Enter</button>
                 </div>
 
-                <p class="text-light">¿Aún no te has registrado? <a href="Registro.html">Regístrate aquí</a></p>
+                <p class="text-light">Still not registered? <a href="Registro.html">Do it here!</a></p>
             </form>
             <!--Fin formulario-->
 
