--- a/views/Lector.html
+++ b/views/Lector.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Reader</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="../styles/Lector.css">
 </head>
+
 <body>
     <!--Inicio del encabezado-->
-    <header>
-        <div>
-            <a title="Go to Admin panel" href="Administracion.html">
-                <img width="40px" src="../resources/images/back.svg" alt="Go back">
-            </a>
+
+    <div class="row mx-auto" id="cabecera">
+        <div class="col-1 p-2"><a title="Go to Admin panel" href="Administracion.html">
+                <img class="img-fluid" width="40px" src="../resources/images/back.svg" alt="Go back">
+            </a></div>
+        <div class="col-11  p-1">
             <h1>Title</h1>
         </div>
+    </div>
 
-        <div>
-            <span>My dictionary</span>
-            <img width="40px" src="../resources/images/dictionary.svg" alt="Click me">
-        </div>
-    </header>
     <!--Fin del encabezado-->
 
-    <!--Inicio del contenido-->
-    <p>Aquí va a ir el documento que se va a leer.</p>
-    <canvas>
-        
-    </canvas>
-    <!--Fin del contenido-->
+    <div class="row  border border-2 border-dark" id="contenedorLector">
+        <div class="container col-9 p-2">
+            <embed src="../resources/EnunciadoReto p48.pdf" width="100%" height="100%" type="application/pdf" />
+        </div>
+        <div class="container col-3 p-3 mx-auto" id="contenedorBuscador">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search word">
+                <button class="btn btn-primary" type="button">Search</button>
+            </div>
+            <img src="../resources/images/background.jpg" id="imagenBuscador" class="img-fluid p-3" />
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum tempore illo dolor laudantium
+                repudiandae
+                adipisci voluptatibus exercitationem repellat assumenda, mollitia eos natus provident nulla perspiciatis
+                ex,
+                consequuntur suscipit fugiat ut.</p>
+        </div>
+    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+        integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
