--- a/styles/Administracion.css
+++ b/styles/Administracion.css
@@ -85,8 +85,21 @@
     width: 100%;
     height: 100%;
     background-color: transparent;
+    text-align: center;
 }
 
-.add-btn:hover {
+#file-btn:hover + .add-btn {
     background-color: white;
+}
+
+#file-btn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
 }
